# YYCCommonplace

./: .clang-format  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  COMPILE.md  LICENSE  README.md  YYCCommonplace.sln
.github/: linux_build.sh  macos_build.sh  windows_build.bat
benchmark/: CMakeLists.txt
benchmark/yycc/carton/: fft.cpp
benchmark/yycc/string/: op.cpp
cmake/: YYCCommonplaceConfig.cmake.in  check_charconv.cmake
doc/: CMakeLists.txt  Doxyfile.in
doc/src/: arg_parser.dox  cenum.dox  com_helper.dox  config_manager.dox  console_helper.dox  constraints.dox  dialog_helper.dox  encoding_helper.dox  enum_helper.dox  env.dox  exception_helper.dox  fs_path_patch.dox  index.dox  intro.dox  io_helper.dox  library_encoding.dox  library_macros.dox  macro.dox  parser_helper.dox  patch.dox  platform_checker.dox  premise_and_principle.dox  rust.dox  std_patch.dox  string_helper.dox  win_fct_helper.dox  win_import.dox
doc/src/carton/: binstore.dox  clap.dox  config_manager.dox  console_helper.dox  csconsole.dox  encoding_helper.dox  exception_helper.dox  fft.dox  ironpad.dox  lexer61.dox  pycodec.dox  tabulate.dox  termcolor.dox  wcwidth.dox
doc/src/encoding/: iconv.dox  stl.dox  windows.dox
doc/src/num/: op.dox  parser.dox  parser_helper.dox  safe_cast.dox  safe_op.dox
doc/src/patch/: io_helper.dox
doc/src/string/: op.dox  reinterpret.dox  string_helper.dox  string_reinterpret.dox
doc/src/windows/: com.dox  console.dox  dialog.dox  import_guard.dox  win_import.dox  winfct.dox
script/: .gitignore  build.bat  gen_build_script.py  gen_win_build.py  linux_build.sh  linux_build.sh.jinja  linux_build.template.sh  pyproject.toml  win_build.bat  win_build.new.bat  (+3 more)
src/: ArgParser.cpp  ArgParser.hpp  CMakeLists.txt  COMHelper.cpp  COMHelper.hpp  ConfigManager.cpp  ConfigManager.hpp  ConsoleHelper.cpp  ConsoleHelper.hpp  Constraints.hpp  DialogHelper.cpp  DialogHelper.hpp  EncodingHelper.cpp  EncodingHelper.hpp  ExceptionHelper.cpp  ExceptionHelper.hpp  FsPathPatch.cpp  FsPathPatch.hpp  IOHelper.cpp  IOHelper.hpp  ParserHelper.hpp  StdPatch.cpp  StdPatch.hpp  StringHelper.cpp  StringHelper.hpp  TerminalHelper.cpp  TerminalHelper.hpp  WinFctHelper.cpp  WinFctHelper.hpp  WinImportPrefix.hpp  WinImportSuffix.hpp  YYCC.natvis  YYCCInternal.hpp  YYCCommonplace.hpp  YYCCommonplace.vcxproj  YYCCommonplace.vcxproj.filters  yycc.hpp
src/YYCC/: ArgParser.cpp  ConfigManager.cpp  ConfigManager.hpp  Constraints.hpp  DialogHelper.cpp  EnumHelper.hpp  ExceptionHelper.cpp  IOHelper.cpp  ParserHelper.hpp  StdPatch.hpp  WinImportSuffix.hpp  YYCCInternal.hpp
src/YYCCLegacy/: ArgParser.cpp  ArgParser.hpp  COMHelper.cpp  COMHelper.hpp  ConsoleHelper.cpp  ConsoleHelper.hpp  DialogHelper.cpp  DialogHelper.hpp  EncodingHelper.cpp  EncodingHelper.hpp  EnumHelper.hpp  ExceptionHelper.cpp  ExceptionHelper.hpp  IOHelper.cpp  IOHelper.hpp  StdPatch.cpp  StdPatch.hpp  StringHelper.cpp  StringHelper.hpp  WinFctHelper.cpp  WinFctHelper.hpp  YYCCInternal.hpp
src/yycc/: cenum.hpp  constraint.hpp  env.cpp  env.hpp  flag_enum.hpp  option.hpp  panic.cpp  panic.hpp  prelude.hpp  primitive.hpp  result.hpp  string.hpp  version.hpp  version.hpp.in
src/yycc/carton/: binstore.hpp  brigadier.hpp  clap.hpp  csconsole.cpp  csconsole.hpp  fft.hpp  ironpad.cpp  ironpad.hpp  lexer61.cpp  lexer61.hpp  pycodec.cpp  pycodec.hpp  tabulate.cpp  tabulate.hpp  termcolor.cpp  termcolor.hpp  wcwidth.cpp  wcwidth.hpp
src/yycc/carton/binstore/: configuration.cpp  configuration.hpp  serdes.hpp  serializer.hpp  setting.cpp  setting.hpp  storage.cpp  storage.hpp  types.cpp  types.hpp
src/yycc/carton/brigadier/: constraint.cpp  constraint.hpp  types.cpp  types.hpp
src/yycc/carton/clap/: application.cpp  application.hpp  manual.cpp  manual.hpp  option.cpp  option.hpp  parser.cpp  parser.hpp  resolver.cpp  resolver.hpp  summary.cpp  summary.hpp  types.hpp  validator.hpp  variable.cpp  variable.hpp
src/yycc/constraint/: builder.hpp
src/yycc/encoding/: iconv.cpp  iconv.hpp  pycodec.cpp  pycodec.hpp  stl.cpp  stl.hpp  stlcvt.cpp  stlcvt.hpp  utf.cpp  utf.hpp  windows.cpp  windows.hpp
src/yycc/macro/: class_copy_move.hpp  compiler_detector.hpp  endian_detector.hpp  feature_probe.hpp  os_detector.hpp  printf_checker.hpp  ptr_size_detector.hpp  stl_detector.hpp  version_cmp.hpp
src/yycc/num/: op.hpp  parse.hpp  safe_cast.hpp  safe_op.hpp  stringify.hpp
src/yycc/patch/: contains.hpp  expected.hpp  fopen.cpp  fopen.hpp  format.hpp  path.cpp  path.hpp  ptr_pad.hpp  starts_ends_with.hpp  stream.cpp  stream.hpp
src/yycc/patch/libcxx/: charconv.hpp  enumerate.hpp  stacktrace.hpp
src/yycc/prelude/: core.hpp  rust.hpp
src/yycc/rust/: env.cpp  env.hpp  option.hpp  panic.cpp  panic.hpp  parse.hpp  prelude.hpp  primitive.hpp  result.hpp  stringify.hpp
src/yycc/rust/num/: parse.hpp  stringify.hpp
src/yycc/string/: format.hpp  op.cpp  op.hpp  parse.hpp  reinterpret.cpp  reinterpret.hpp  stream.cpp  stream.hpp  stringify.hpp
src/yycc/windows/: com.cpp  com.hpp  console.cpp  console.hpp  dialog.cpp  dialog.hpp  import_guard_head.hpp  import_guard_tail.hpp  unsafe_suppressor.hpp  winfct.cpp  winfct.hpp
testbench/: CMakeLists.txt  Testbench.vcxproj  Testbench.vcxproj.filters  main.cpp  main_legacy.cpp
testbench/shared/: literals.cpp  parse_template.hpp  stringify_template.hpp
testbench/yycc/: constraint.cpp  flag_enum.cpp  string.cpp
testbench/yycc/carton/: pycodec.cpp  tabulate.cpp  termcolor.cpp  wcwidth.cpp
testbench/yycc/constraint/: builder.cpp
testbench/yycc/encoding/: iconv.cpp  stl.cpp  windows.cpp
testbench/yycc/macro/: compiler_detector.cpp  ptr_size_detector.cpp
testbench/yycc/num/: op.cpp  parse.cpp  safe_cast.cpp  stringify.cpp
testbench/yycc/patch/: contains.cpp  format.cpp  ptr_pad.cpp  starts_ends_with.cpp
testbench/yycc/rust/: env.cpp  parse.cpp  stringify.cpp
testbench/yycc/rust/num/: parse.cpp  stringify.cpp
testbench/yycc/string/: op.cpp  parse.cpp  reinterpret.cpp  stream.cpp  stringify.cpp
testbench/yycc/windows/: console.cpp  dialog.cpp  winfct.cpp
(+60 files in other folders)
